Fix size of text wrap ring.

--- a/less/_pages/_landing.less
+++ b/less/_pages/_landing.less
@@ -27,11 +27,26 @@
       @font-desktop-title-medium-abril();
       font-size: 14px;
     }
-
-    
   }
   &__hero {
     padding: @sizes-medium-3 @sizes-small-3 @sizes-large-2 @sizes-small-3;
+
+    &--banner {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 360px;
+      width: 360px;
+      margin: auto;
+
+      svg {
+        width: 310px;
+      }
+
+      img {
+        height: 152px;
+      }
+    }
   }
 
   &__presentation {
